--- a/biyosfer.html
+++ b/biyosfer.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="yontemlerimiz.css">
+    <link rel="stylesheet" href="biyosfer.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Uyguladığımız Yöntemler</title>
+    <title>Biyosfer</title>
 </head>
 
 <body>
@@ -74,28 +74,30 @@
 
     <section class="icerik">
 
-        <h2>Yöntemlerimiz</h2>
+        <h2>Biyosfer</h2>
         <hr>
         <br>
+        <p>Biyosfer, (Yunanca βίος "bíos" "yaşam" ve σφαῖρα "sphaira" "küre" anlamında), Dünya'da canlıların yaşadığı
+            16-20 km kalınlığındaki tabaka; (Yunanca οἶκος "oîkos" "çevre" ve σφαῖρα "sphaira" "küre" anlamında), tüm
+            ekosistemlerin dünya çapındaki toplamıdır, ekosfer olarak da bilinir; "canlı yüzey" de denir. Aynı zamanda
+            Dünya'daki yaşam bölgesi olarak da adlandırılabilir. Biyosfer (teknik olarak küresel bir kabuktur), minimum
+            girdi ve çıktılarla neredeyse madde bakımından kapalı bir sistemdir. Enerji ile ilgili olarak, yılda
+            yaklaşık 130 terawatt oranında güneş enerjisi yakalayan fotosentez ile açık bir sistemdir. Bununla
+            birlikte, enerji dengesine yakın kendi kendini düzenleyen bir sistemdir.En genel biyofizyolojik tanımla
+            biyosfer, litosfer, kriyosfer, hidrosfer ve atmosfer elementleriyle etkileşimleri de dâhil olmak üzere tüm
+            canlıları ve ilişkilerini bütünleştiren küresel ekolojik sistemdir. Biyosferin, en azından yaklaşık 3.5
+            milyar yıl önce bir biyopoez (basit organik bileşikler gibi canlı olmayan maddeden doğal olarak oluşmuş
+            yaşam) veya biyogenez (canlı maddeden oluşmuş yaşam) sürecinden başlayarak evrim geçirdiği varsayılmaktadır.
 
-        <ul>
-            <li>* Sismik Kırılma, Yansıma, 2 ve 3 boyutlu Tomografik Ölçümler</li>
-            <li>* MASW, SASW, Remi ve 2 ve 3 Boyutlu Tomografik Ölçümler</li>
-            <li>* Rezistivite (DES) (AB/2 max 4000 m)</li>
-            <li>* GPR (jeoradar)</li>
-            <li>* Çok elektrotlu Elektrik Yöntemi (2B ve 3B, max 950 m profil 96 elektrot)</li>
-            <li>* Mikrotremör</li>
-            <li>* Manyetotellürk (MT)- Audio Manyetotellürik (AMT)</li>
-            <li>* IP</li>
-            <li>* Manyetik</li>
-            <li>* Mikrogravite</li>
-            <li>* SP -Doğal Potansiyel</li>
-            <li>* Kuyu Logu Ölçümleri</li>
-            <li>* Geoteknik Programlar (Plaxis-Talren etc.)</li>
-            
-        </ul>
+            Bu ad ilk kez Fransız bilgin Lamarck tarafından ortaya atılmış ve 20. yüzyılın başında bilim dünyasınca
+            benimsenmiştir. Biyosferin atmosfer içindeki yüksekliği 10.000 m'ye ulaşır. Bu yükseklikten öte bakteri ve
+            mantar sporlarına rastlanmamıştır. Yerde yaşayan kara hayvanları için biyosfer 6.500–6.800 m, yeşil bitkiler
+            için 6.200 m yüksekliğe kadar çıkabilir. Denizin altında 5.000 m derinlikte canlıların yaşadığı
+            saptandığından bu da biyosferin alt sınırını oluşturur (Dünyanın en derin noktası olarak kabul edilen
+            Mariana Çukurunun dibinde yaşam olabileceği öngörülmektedir)..</p>
         <br>
         <hr>
+        <br>
     </section>
 
     <!--İcerik Bölümü Bitiş-->
@@ -196,7 +198,7 @@
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i> 
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i>
                 </a>
             </li>
         </ul>
@@ -221,15 +223,18 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799 64 79</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799
+                        64 79</i></a>
             </li>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> yerbilimleri@.com.tr</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true">
+                        yerbilimleri@.com.tr</i></a>
             </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
+
         Tüm Hakları Saklıdır &copy;
     </div>
 
