--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
                         <li><a href="yontemlerimiz.html">Yöntemlerimiz</a></li>
                         <li><a href="jeofizik.html">Jeofizik Ekipmanlar</a></li>
+                        <li><a href="atmosfer.html">Atmosfer</a></li>
+                        <li><a href="biyosfer.html">Biyosfer</a></li>
+                        <li><a href="hidrosfer.html">Hidrosfer</a></li>
+                        <li><a href="litosfer.html">Litosfer</a></li>
+                        <li><a href="pedosfer.html">Pedosfer</a></li>
                     </ul>
                 </li>
                 <li class="ana-link"><a href="#">HİZMETLER</a>
@@ -72,32 +77,32 @@
         <h2>Yer Bilimleri Nedir ?</h2>
         <hr>
         <br>
-        Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
-        gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
-        düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
-        alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
-        biyosferdir.
+        <p> Yer bilimleri, Dünya'nın ve atmosferinin fiziksel ve kimyasal yapısıyla uğraşan bir bilim dalı olup, Dünya
+            gezegenine ait bütün doğa bilimi alanlarını kapsar. Yer bilimleri gezegen biliminin bir dalı olarak
+            düşünülebilir ancak tarihi daha eskiye dayanır. Yer bilimleri, her biri kendi içinde daha özelleşmiş
+            alanlara ayrılabilen dört ana çalışma alanından oluşur; bunlar sırasıyla litosfer, hidrosfer, atmosfer ve
+            biyosferdir.</p>
         <br>
         <br>
-        Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
-        ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
-        yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
-        beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
-        tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
-        insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
-        oluşturulmasına katkıda bulunur.
+        <p>Yer bilimlerine hem indirgemeci hem de bütüncül yaklaşımlar bulunmaktadır. Yer bilimleri aynı zamanda Dünya
+            ve Dünya'ya komşu gökcisimlerinin incelenmesidir. Yer bilimcilerin bir kısmı enerji ve maden kaynaklarının
+            yerlerini tespit etmek için üzerinde çalıştıkları gezegen hakkındaki bilgilerini kullanırken, bir kısmı da
+            beşeri faaliyetlerin Dünya'nın çevresine olan etkilerini araştırır ve gezegenimizi korumak için yöntemler
+            tasarlar. Bazısı da volkanlar, depremler ve kasırgalar gibi doğa olayları hakkındaki bilgilerini kullanarak
+            insanların bu tehlikeli doğa olaylarına karşı savunmasız kalmaması için yerleşim ve topluluk planlarının
+            oluşturulmasına katkıda bulunur.</p>
         <br>
         <br>
-        Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
-        biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
-        nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
-        matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
-        araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
-        depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
-        minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
-        tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
-        işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
-        toplarlar ve bulgularını çizelge ve haritalara kaydederler.
+        <p>Yer bilimleri, jeoloji, litosfer ve büyük ölçekli Dünya iç yapısının yanı sıra atmosfer, hidrosfer ve
+            biyosferin incelenmesini kapsayabilir. Yer bilimciler Dünya'nın nasıl işlediği ve evrimleştiği hakkında
+            nicel bir anlayış oluşturmak için genellikle jeoloji, kronoloji, fizik, kimya, coğrafya, biyoloji ve
+            matematik bilimlerini kullanır. Örneğin, meteorologlar hava durumunu inceler ve tehlikeli fırtınaları
+            araştırırlar. Hidrologlar suyu inceler ve gözlemleri sonucunda sel uyarısında bulunurlar. Sismologlar
+            depremleri inceler ve nerede gerçekleşeceğini anlamaya çalışırlar. Jeologlar kayaları inceler ve faydalı
+            minerallerin bulunmasına yardımcı olurlar. Yer bilimciler çoğunlukla sahada çalıştıkları için dağlara
+            tırmanmak, deniz dibini araştırmak, mağaralar boyunca sürünmek, bataklıklarda bata çıka yürümek genellikle
+            işlerinin birer parçasıdır. Ölçümler yapar ve numune (bunlara taşlar ve nehir suyu örnek verilebilir)
+            toplarlar ve bulgularını çizelge ve haritalara kaydederler.</p>
         <br>
         <hr>
 
@@ -155,63 +160,43 @@
             <h3>Tünel ve Güzergah Etütleri</h3>
             <hr>
             <li><a href="arkeojeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Arkeojeofizik Araştırmalar
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Arkeojeofizik Araştırmalar</i>
                 </a>
             </li>
             <li><a href="gomuluyapi.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Gömülü Yapı Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Gömülü Yapı Araştırmaları</i>
                 </a>
             </li>
             <li><a href="jeotermal.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeotermal Enerji Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeotermal Enerji Araştırmaları</i>
                 </a>
             </li>
             <li><a href="geoteknik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Geoteknik Araştırmalar
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Geoteknik Araştırmalar</i>
                 </a>
             </li>
             <li><a href="tunel.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Tünel ve Güzergah Etütleri
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Tünel ve Güzergah Etütleri</i>
                 </a>
             </li>
             <li><a href="denizjeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Deniz Jeofiziği ve Jeolojisi
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Deniz Jeofiziği ve Jeolojisi</i>
                 </a>
             </li>
             <li><a href="jeoradar.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeoradar ve Yapı Radarı
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeoradar ve Yapı Radarı</i>
                 </a>
             </li>
             <li><a href="yeralti.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Yeraltı Suyu Aramaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Yeraltı Suyu Aramaları</i>
                 </a>
             </li>
             <li><a href="maden.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Maden, Kömür ve Ham Madde Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Maden, Kömür ve Ham Madde Araştırmaları</i>
                 </a>
             </li>
             <li><a href="zemin.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Zemin ve Yerleşime Uygunluk Etütleri
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Zemin ve Yerleşime Uygunluk Etütleri</i>
                 </a>
             </li>
         </ul>
@@ -220,18 +205,15 @@
             <h3>KURUMSAL</h3>
             <hr>
             <li><a href="hakkimizda.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Hakkımızda
+                    <i class="fa fa-chevron-right" aria-hidden="true">Hakkımızda</i>
                 </a>
             </li>
             <li><a href="yontemlerimiz.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Yöntemlerimiz
+                    <i class="fa fa-chevron-right" aria-hidden="true">Yöntemlerimiz</i>
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeofizik Ekipmanlar
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i>
                 </a>
             </li>
         </ul>
@@ -240,18 +222,15 @@
             <h3>KAYNAKLAR</h3>
             <hr>
             <li><a href="http://www.koeri.boun.edu.tr/scripts/lst6.asp">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Türkiye'deki Son Depremler
+                    <i class="fa fa-chevron-right" aria-hidden="true">Türkiye'deki Son Depremler</i>
                 </a>
             </li>
             <li><a href="https://earthquake.usgs.gov/earthquakes/map/?extent=12.8118,-135&extent=57.37394,-55.01953">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Dünya'daki Son Depremler
+                    <i class="fa fa-chevron-right" aria-hidden="true">Dünya'daki Son Depremler</i>
                 </a>
             </li>
             <li><a href="https://deprem.afad.gov.tr/last-earthquakes.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Afad Deprem Haritası
+                    <i class="fa fa-chevron-right" aria-hidden="true">Afad Deprem Haritası</i>
                 </a>
             </li>
         </ul>
@@ -259,15 +238,20 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79</li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr</li>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799
+                        64 79</i></a>
+            </li>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true">
+                        yerbilimleri@.com.tr</i></a>
+            </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
+
         Tüm Hakları Saklıdır &copy;
-        </div>
+    </div>
 
     <!--Footer Bitiş-->
 
