--- a/hidrosfer.html
+++ b/hidrosfer.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="yontemlerimiz.css">
+    <link rel="stylesheet" href="hidrosfer.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Uyguladığımız Yöntemler</title>
+    <title>Hidrosfer</title>
 </head>
 
 <body>
@@ -74,28 +74,38 @@
 
     <section class="icerik">
 
-        <h2>Yöntemlerimiz</h2>
+        <h2>Hidrosfer</h2>
         <hr>
         <br>
+        <p>Hidrosfer (Yunanca ōρ hydōr, "su" ve σφαῖρα sphaira, "küre"), su küre demektir. Bir gezegenin veya
+            doğal uydunun yüzeyinde, altında ve üstünde bulunan birleşik su kütlesine verilen isimdir. Dünya'nın
+            hidrosferi yaklaşık 4 milyar yıldır var olmasına rağmen, şekil değiştirmeye devam etmektedir. Bu
+            durum, deniz taban yayılması ve kara ile okyanusları yeniden düzenleyen kıt'aların kayması nedeniyle
+            gerçekleşmektedir.
 
-        <ul>
-            <li>* Sismik Kırılma, Yansıma, 2 ve 3 boyutlu Tomografik Ölçümler</li>
-            <li>* MASW, SASW, Remi ve 2 ve 3 Boyutlu Tomografik Ölçümler</li>
-            <li>* Rezistivite (DES) (AB/2 max 4000 m)</li>
-            <li>* GPR (jeoradar)</li>
-            <li>* Çok elektrotlu Elektrik Yöntemi (2B ve 3B, max 950 m profil 96 elektrot)</li>
-            <li>* Mikrotremör</li>
-            <li>* Manyetotellürk (MT)- Audio Manyetotellürik (AMT)</li>
-            <li>* IP</li>
-            <li>* Manyetik</li>
-            <li>* Mikrogravite</li>
-            <li>* SP -Doğal Potansiyel</li>
-            <li>* Kuyu Logu Ölçümleri</li>
-            <li>* Geoteknik Programlar (Plaxis-Talren etc.)</li>
-            
-        </ul>
+            Dünya üzerinde 1,386 milyon km3 (333.000.000 km3) su olduğu tahmin edilmektedir Bunlar, yer altı suyu,
+            okyanuslar, göller ve akarsularda sıvı ve donmuş formlarda bulunan sulardan oluşmaktadır. Tuzlu su bu
+            miktarın %97,5'ini oluştururken, tatlı su ise %2,5'ini oluşturmaktadır. Bu tatlı suyun %68,9'u Kuzey Kutbu,
+            Antarktika ve dağ buzullarında buz ve kalıcı kar örtüsü şeklindedir. %30,8'i taze yeraltı suyu şeklinde
+            bulunur. Yeryüzündeki tatlı suyun sadece %0,3'ü kolayca erişilebilir göllerde, rezervuarlarda ve nehir
+            sistemlerinde bulunmaktadır.
+
+
+            Mariana Çukuru, Büyük Okyanus'ta bulunmaktadır.
+            Dünya hidrosferinin toplam kütlesi yaklaşık 1,4 × 1018 tondur. Dünya toplam kütlesinin yaklaşık %0,023'ünü
+            oluşturmaktadır. Herhangi bir zamanda, yaklaşık 20 × 1012 tonu, Dünya atmosferinde su buharı şeklinde
+            bulunmaktadır. 361 milyon km2lik (139,5 milyon mil2) bir alan olan Dünya yüzeyinin yaklaşık %71'i okyanusla
+            kaplıdır. Dünya okyanuslarının ortalama tuzluluğu, deniz suyunda kilogram başına yaklaşık 35 gram tuzdur
+            (%3,5).
+
+            Hidrosferin kalınlığı deniz seviyesine göre +3810 m (Titikaka Gölü) ile -11033 m (Mariana Çukuru) arasında
+            değişir. Dünya'nın %71'ini Hidrosfer, %29'unu karalar oluşturur. Kuzey Yarım Kürede %61'i Hidrosfer, %39'u
+            kara iken, Güney Yarım Kürede %81'i Hidrosfer, %19'u karalar şeklindedir. Hidrosfer, canlıların yaşam
+            kaynağıdır. Hidrosfer üzerinde birçok okyanus akıntısı etkilidir. Bunlardan en çok bilinenler Gulf Stream
+            okyanus akıntısı ve Labrador okyanus akıntısıdır.</p>
         <br>
         <hr>
+        <br>
     </section>
 
     <!--İcerik Bölümü Bitiş-->
@@ -196,7 +206,7 @@
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i> 
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i>
                 </a>
             </li>
         </ul>
@@ -221,15 +231,18 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799 64 79</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799
+                        64 79</i></a>
             </li>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> yerbilimleri@.com.tr</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true">
+                        yerbilimleri@.com.tr</i></a>
             </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
+
         Tüm Hakları Saklıdır &copy;
     </div>
 
