--- a/jeofizikgaleri.html
+++ b/jeofizikgaleri.html
@@ -32,6 +32,11 @@
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
                         <li><a href="yontemlerimiz.html">Yöntemlerimiz</a></li>
                         <li><a href="jeofizik.html">Jeofizik Ekipmanlar</a></li>
+                        <li><a href="atmosfer.html">Atmosfer</a></li>
+                        <li><a href="biyosfer.html">Biyosfer</a></li>
+                        <li><a href="hidrosfer.html">Hidrosfer</a></li>
+                        <li><a href="litosfer.html">Litosfer</a></li>
+                        <li><a href="pedosfer.html">Pedosfer</a></li>
                     </ul>
                 </li>
                 <li class="ana-link"><a href="#">HİZMETLER</a>
@@ -131,63 +136,43 @@
             <h3>Tünel ve Güzergah Etütleri</h3>
             <hr>
             <li><a href="arkeojeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Arkeojeofizik Araştırmalar
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Arkeojeofizik Araştırmalar</i>
                 </a>
             </li>
             <li><a href="gomuluyapi.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Gömülü Yapı Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Gömülü Yapı Araştırmaları</i>
                 </a>
             </li>
             <li><a href="jeotermal.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeotermal Enerji Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeotermal Enerji Araştırmaları</i>
                 </a>
             </li>
             <li><a href="geoteknik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Geoteknik Araştırmalar
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Geoteknik Araştırmalar</i>
                 </a>
             </li>
             <li><a href="tunel.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Tünel ve Güzergah Etütleri
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Tünel ve Güzergah Etütleri</i>
                 </a>
             </li>
             <li><a href="denizjeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Deniz Jeofiziği ve Jeolojisi
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Deniz Jeofiziği ve Jeolojisi</i>
                 </a>
             </li>
             <li><a href="jeoradar.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeoradar ve Yapı Radarı
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeoradar ve Yapı Radarı</i>
                 </a>
             </li>
             <li><a href="yeralti.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Yeraltı Suyu Aramaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Yeraltı Suyu Aramaları</i>
                 </a>
             </li>
             <li><a href="maden.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Maden, Kömür ve Ham Madde Araştırmaları
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Maden, Kömür ve Ham Madde Araştırmaları</i>
                 </a>
             </li>
             <li><a href="zemin.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Zemin ve Yerleşime Uygunluk Etütleri
-
+                    <i class="fa fa-chevron-right" aria-hidden="true">Zemin ve Yerleşime Uygunluk Etütleri</i>
                 </a>
             </li>
         </ul>
@@ -196,18 +181,15 @@
             <h3>KURUMSAL</h3>
             <hr>
             <li><a href="hakkimizda.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Hakkımızda
+                    <i class="fa fa-chevron-right" aria-hidden="true">Hakkımızda</i>
                 </a>
             </li>
             <li><a href="yontemlerimiz.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Yöntemlerimiz
+                    <i class="fa fa-chevron-right" aria-hidden="true">Yöntemlerimiz</i>
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Jeofizik Ekipmanlar
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i> 
                 </a>
             </li>
         </ul>
@@ -216,18 +198,15 @@
             <h3>KAYNAKLAR</h3>
             <hr>
             <li><a href="http://www.koeri.boun.edu.tr/scripts/lst6.asp">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Türkiye'deki Son Depremler
+                    <i class="fa fa-chevron-right" aria-hidden="true">Türkiye'deki Son Depremler</i>
                 </a>
             </li>
             <li><a href="https://earthquake.usgs.gov/earthquakes/map/?extent=12.8118,-135&extent=57.37394,-55.01953">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Dünya'daki Son Depremler
+                    <i class="fa fa-chevron-right" aria-hidden="true">Dünya'daki Son Depremler</i>
                 </a>
             </li>
             <li><a href="https://deprem.afad.gov.tr/last-earthquakes.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    Afad Deprem Haritası
+                    <i class="fa fa-chevron-right" aria-hidden="true">Afad Deprem Haritası</i>
                 </a>
             </li>
         </ul>
@@ -235,9 +214,9 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> +90 465 799 64 79
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799 64 79</i></a>
             </li>
-            <li style="color: antiquewhite;"><i class="fa fa-chevron-right" aria-hidden="true"></i> yerbilimleri@.com.tr
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> yerbilimleri@.com.tr</i></a>
             </li>
         </ul>
 
