--- a/litosfer.html
+++ b/litosfer.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="yontemlerimiz.css">
+    <link rel="stylesheet" href="litosfer.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Uyguladığımız Yöntemler</title>
+    <title>Litosfer</title>
 </head>
 
 <body>
@@ -74,28 +74,17 @@
 
     <section class="icerik">
 
-        <h2>Yöntemlerimiz</h2>
+        <h2>Litosfer</h2>
         <hr>
         <br>
-
-        <ul>
-            <li>* Sismik Kırılma, Yansıma, 2 ve 3 boyutlu Tomografik Ölçümler</li>
-            <li>* MASW, SASW, Remi ve 2 ve 3 Boyutlu Tomografik Ölçümler</li>
-            <li>* Rezistivite (DES) (AB/2 max 4000 m)</li>
-            <li>* GPR (jeoradar)</li>
-            <li>* Çok elektrotlu Elektrik Yöntemi (2B ve 3B, max 950 m profil 96 elektrot)</li>
-            <li>* Mikrotremör</li>
-            <li>* Manyetotellürk (MT)- Audio Manyetotellürik (AMT)</li>
-            <li>* IP</li>
-            <li>* Manyetik</li>
-            <li>* Mikrogravite</li>
-            <li>* SP -Doğal Potansiyel</li>
-            <li>* Kuyu Logu Ölçümleri</li>
-            <li>* Geoteknik Programlar (Plaxis-Talren etc.)</li>
-            
-        </ul>
+        <p>Litosfer, eski Yunancada "kayalık" Hintçede "küre" anlamlarına gelir. Tanım olarak ise, sert ve mekanik
+            özellikleri ile tanımlanan karasal tipte bir gezegenin veya doğal uydunun en dış kabuğudur. Litosfer, kabuk
+            ve üst mantonun binlerce yıl veya daha büyük zaman ölçeklerinde elastik olarak davranan üst mantonun en üst
+            bölümünden oluşur. Gezegenimizin kaya kısmını oluşturan ve en dış katmanı olan kabuğu tanımlamada kimyasal
+            ve mineraloji yapısı kullanılır. Litosferin altındaki katman, astenosfer olarak bilinir.</p>
         <br>
         <hr>
+        <br>
     </section>
 
     <!--İcerik Bölümü Bitiş-->
@@ -196,7 +185,7 @@
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i> 
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i>
                 </a>
             </li>
         </ul>
@@ -221,15 +210,18 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799 64 79</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799
+                        64 79</i></a>
             </li>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> yerbilimleri@.com.tr</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true">
+                        yerbilimleri@.com.tr</i></a>
             </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
+
         Tüm Hakları Saklıdır &copy;
     </div>
 
