--- a/pedosfer.html
+++ b/pedosfer.html
@@ -9,12 +9,12 @@
     <meta name="keywords" content="Yer Bilimleri, Earth Sciences, Yer Bilimi, Earth Science">
     <meta name="description" content="Yer Bilimleri ve Alt Dalları">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="yontemlerimiz.css">
+    <link rel="stylesheet" href="pedosfer.css">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-    <title>Uyguladığımız Yöntemler</title>
+    <title>Pedosfer</title>
 </head>
 
 <body>
@@ -74,28 +74,23 @@
 
     <section class="icerik">
 
-        <h2>Yöntemlerimiz</h2>
+        <h2>Pedosfer</h2>
         <hr>
         <br>
+        <p>Pedosfer (Toprakküre), yerkürenin en dış katmanı olan Litosfer (Taşküre) üzerini kaplayan toprakların
+            oluşturduğu katmandır. Yunan dilinde "pedon" (toprak) ve sfaíra (küre) kelimelerinin birleşiminden
+            oluşmuştur. Pedeosfer ile birlikte litosfer (taşküre), atmosfer (havaküre), hidrosfer (suküre) ve Biyosfer
+            doğal çevreyi oluşturur.[1]
 
-        <ul>
-            <li>* Sismik Kırılma, Yansıma, 2 ve 3 boyutlu Tomografik Ölçümler</li>
-            <li>* MASW, SASW, Remi ve 2 ve 3 Boyutlu Tomografik Ölçümler</li>
-            <li>* Rezistivite (DES) (AB/2 max 4000 m)</li>
-            <li>* GPR (jeoradar)</li>
-            <li>* Çok elektrotlu Elektrik Yöntemi (2B ve 3B, max 950 m profil 96 elektrot)</li>
-            <li>* Mikrotremör</li>
-            <li>* Manyetotellürk (MT)- Audio Manyetotellürik (AMT)</li>
-            <li>* IP</li>
-            <li>* Manyetik</li>
-            <li>* Mikrogravite</li>
-            <li>* SP -Doğal Potansiyel</li>
-            <li>* Kuyu Logu Ölçümleri</li>
-            <li>* Geoteknik Programlar (Plaxis-Talren etc.)</li>
-            
-        </ul>
+            Pedosferi oluşturan topraklar, kayaçların fiziksel, kimyasal ve biyolojik yollarla ayrışması ile oluşur.
+            Bitkilerin tutunup, büyüdüğü katmandır. Toprak içinde bitki ve hayvan atıkları (humus) ile kum, kil,
+            mikroskobik canlılar, hava, su bulunur.
+
+            Bitkiler fotosentez yaparak güneşten gelen enerjiyi canlıların kullanabileceği hale getirir. Pedosferde
+            bitkilere ev sahipliği yaptığından ekosistem açısından oldukça önemlidir.</p>
         <br>
         <hr>
+        <br>
     </section>
 
     <!--İcerik Bölümü Bitiş-->
@@ -196,7 +191,7 @@
                 </a>
             </li>
             <li><a href="jeofizik.html">
-                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i> 
+                    <i class="fa fa-chevron-right" aria-hidden="true">Jeofizik Ekipmanlar</i>
                 </a>
             </li>
         </ul>
@@ -221,15 +216,18 @@
         <ul>
             <h3>Bize Ulaşın</h3>
             <hr>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799 64 79</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> +90 465 799
+                        64 79</i></a>
             </li>
-            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true"> yerbilimleri@.com.tr</i></a>
+            <li style="color: antiquewhite;"><a href=""><i class="fa fa-chevron-right" aria-hidden="true">
+                        yerbilimleri@.com.tr</i></a>
             </li>
         </ul>
 
     </footer>
 
     <div class="footerbar">
+
         Tüm Hakları Saklıdır &copy;
     </div>
 
